fvp-foundation-gicv2-psci.dts: reserve memory for secure frame buffer

--- a/fdts/fvp-foundation-gicv2-psci.dts
+++ b/fdts/fvp-foundation-gicv2-psci.dts
@@ -32,6 +32,8 @@
 
 /memreserve/ 0x81000000 0x00100000;
 /memreserve/ 0x80000000 0x00010000;
+/* Secure frame buffer */
+/memreserve/ 0xff000000 0x00200000;
 
 / {
 };
